fix x modal on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -444,7 +444,7 @@ header img {
 #exit, #exit-deck, #exit-interior {
     position: absolute;
     right: 0;
-    margin-right: 1.5em;
+    margin-right: 1em;
     color: white;
     background-color: rgba(0,0,0,0.0);
     font-size: 1.5em;
